# VRChatEasyTrans

./: AudioCapture.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  README.md  audiocapture.cpp  audiocapture.h  config.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  solooscbroadcaster.cpp  solooscbroadcaster.h  speechrecogniser.cpp  speechrecogniser.h  translator.cpp  translator.h  使用说明.txt
VRChatEasyTrans-Release/: config.ini
